--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "Data": "node scripts/data-migration.mjs "
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.10.2",
     "@sanity/client": "^6.27.1",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.71.2",
