--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.7.9",
     "dotenv": "^16.4.7",
     "next": "^15.1.6",
+    "next-auth": "^4.24.11",
     "next-sanity": "^9.8.42",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
